@@ -1,0 +1,39 @@
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+
+<html>
+<head>
+
+<title>CPAN =&gt; Debian</title>
+<link href="reset.css" rel="stylesheet"/>
+<link href="grid.css" rel="stylesheet"/>
+<script type="text/javascript" src="jquery-1.5.2.js"></script>
+<script type="text/javascript" src="md5.js"></script>
+<script type="text/javascript" src="script.js"></script>
+
+</head>
+<body>
+	<div class="container_12">
+		<div class="grid_12"><h1>CPAN =&gt; Debian</h1></div>
+		<div class="clear"></div>
+		<div class="grid_12">
+			<form method="get">
+				<input type="search" name="q" value=""/>
+				<input type="submit" value="Search"/>
+			</form>
+		</div>
+		<div class="clear"></div>
+
+		<div class="grid_6">
+			<h2>CPAN</h2>
+			module name: <span id="cpanModuleName"></span><br/>
+			path: <span id="cpanPath"></span><br/>
+			version: <span id="cpanVersion"></span><br/>
+		</div>
+		<div class="grid_6">
+			<h2>Debian</h2>
+			<div id="debianInfo"></div>
+		</div>
+		<div class="clear"></div>
+	</div>
+</body>
+</html>
